--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-  <style>
-    h1 {
-      text-align: center;
-      color: blueviolet;
-    }
-  </style>
+
   <body>
     <h1>Hello World</h1>
+
+    <script src="script.js"></script>
   </body>
 </html>
