Added script file and edited source

--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@
     </div>
     <!-- container -->
 
-    <script src="src/index.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
