adding open-source link

--- a/index.html
+++ b/index.html
@@ -118,6 +118,12 @@
           <!-- row -->
         </div>
         <!-- card-body -->
+        <p class="open-source">
+          <a href="https://github.com/carolinesteen/weather-app" target="_blank"
+            >Open-source code</a
+          >
+          by Caroline Steen
+        </p>
       </div>
       <!-- card -->
     </div>
