updated open-source code

--- a/index.html
+++ b/index.html
@@ -116,14 +116,16 @@
             <hr />
           </div>
           <!-- row -->
+          <p class="open-source">
+            <a
+              href="https://github.com/carolinesteen/weather-app"
+              target="_blank"
+              >Open-source code</a
+            >
+            by Caroline Steen
+          </p>
         </div>
         <!-- card-body -->
-        <p class="open-source">
-          <a href="https://github.com/carolinesteen/weather-app" target="_blank"
-            >Open-source code</a
-          >
-          by Caroline Steen
-        </p>
       </div>
       <!-- card -->
     </div>
