Fixed temperature css and icon

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                       class="weather-icon float-left"
                       id="weather-icon"
                     />
-                    <div>
+                    <div id="temp-element">
                       <span class="temperature" id="temperature">13</span
                       ><span class="unit">°C</span>
                     </div>
@@ -86,7 +86,7 @@
             </div>
             <hr />
             <div class="container-forecast">
-              <div class="row">
+              <div class="row" id="forecast-row">
                 <div class="col">
                   <div class="forecast-day">Monday</div>
                   <div class="forecast-icon">⛅️</div>
