--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="card-body">
             <form class="search-form" id="search-form">
               <div class="row">
-                <div class="col-6">
+                <div class="col-7">
                   <input
                     type="search"
                     placeholder="Type a city.."
@@ -34,15 +34,15 @@
                     class="form-control shadow-sm"
                   />
                 </div>
-                <div class="col-3">
+                <div class="col-2">
                   <input
                     type="submit"
                     value="Search"
                     class="form-control btn btn-primary"
-                    id="button_primary"
+                    id="search-button"
                   />
                 </div>
-                <div class="col-3">
+                <div class="col-2">
                   <button
                     class="form-control btn btn-primary"
                     id="currentLocation"
@@ -78,7 +78,10 @@
                     />
                     <div id="temp-element">
                       <span class="temperature" id="temperature">13</span
-                      ><span class="unit">°C</span>
+                      ><span class="unit">
+                        <a href="" id="celcius-link">°C</a> |
+                        <a href="" id="farenheit-link">°F</a>
+                      </span>
                     </div>
                   </div>
                 </div>
