--- a/index.html
+++ b/index.html
@@ -93,29 +93,60 @@
                 <div class="col">
                   <div class="forecast-day">Monday</div>
                   <div class="forecast-icon">⛅️</div>
-                  <div class="forecast-temp">H 15°C / L 12°C</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
                 </div>
                 <div class="col">
                   <div class="forecast-day">Tuesday</div>
                   <div class="forecast-icon">🌧️</div>
-                  <div class="forecast-temp">H 14°C / L 12°C</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
                   <div class="rainy">100%</div>
                 </div>
                 <div class="col">
                   <div class="forecast-day">Wednesday</div>
                   <div class="forecast-icon">🌧️</div>
-                  <div class="forecast-temp">H 15°C / L 12°C</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
                   <div class="rainy">80%</div>
                 </div>
                 <div class="col">
                   <div class="forecast-day">Thursday</div>
                   <div class="forecast-icon">🌤️</div>
-                  <div class="forecast-temp">H 15°C / L 10°C</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
                 </div>
                 <div class="col">
                   <div class="forecast-day">Friday</div>
                   <div class="forecast-icon">☁️</div>
-                  <div class="forecast-temp">H 16°C / L 10°C</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="forecast-day">Friday</div>
+                  <div class="forecast-icon">☁️</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="forecast-day">Friday</div>
+                  <div class="forecast-icon">☁️</div>
+                  <div class="forecast-temp">
+                    <span class="high">14°C / </span>
+                    <span class="low">12°C </span>
+                  </div>
                 </div>
               </div>
             </div>
