--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </div>
             </div>
 
-            <div class="container-forecast">
+            <div class="forecast-container" id="forecast-container">
               <div class="row" id="forecast-row">
                 <div class="col">
                   <div class="forecast-day">Monday</div>
