--- a/index.html
+++ b/index.html
@@ -88,68 +88,7 @@
               </div>
             </div>
 
-            <div class="forecast-container" id="forecast-container">
-              <div class="row" id="forecast-row">
-                <div class="col">
-                  <div class="forecast-day">Monday</div>
-                  <div class="forecast-icon">⛅️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="forecast-day">Tuesday</div>
-                  <div class="forecast-icon">🌧️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                  <div class="rainy">100%</div>
-                </div>
-                <div class="col">
-                  <div class="forecast-day">Wednesday</div>
-                  <div class="forecast-icon">🌧️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                  <div class="rainy">80%</div>
-                </div>
-                <div class="col">
-                  <div class="forecast-day">Thursday</div>
-                  <div class="forecast-icon">🌤️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="forecast-day">Friday</div>
-                  <div class="forecast-icon">☁️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="forecast-day">Friday</div>
-                  <div class="forecast-icon">☁️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="forecast-day">Friday</div>
-                  <div class="forecast-icon">☁️</div>
-                  <div class="forecast-temp">
-                    <span class="high">14°C / </span>
-                    <span class="low">12°C </span>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="forecast-container" id="forecast-container"></div>
           </div>
           <!-- row -->
           <p class="open-source">
