--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-8">
+                <div class="col-lg-6 col-md-6 col-xs-6">
                   <div class="temperature-container d-flex justify-content-end">
                     <canvas width="52" height="52"></canvas>
                     <img
