--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </form>
             <div class="WeatherInfo">
               <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-xs-6">
                   <h1 id="city"></h1>
                   <ul>
                     <li>
