--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </form>
             <div class="WeatherInfo">
               <div class="row">
-                <div class="col-lg-6 col-md-6 col-xs-6">
+                <div class="col-6">
                   <h1 id="city"></h1>
                   <ul>
                     <li>
@@ -67,9 +67,8 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-lg-6 col-md-6 col-xs-6">
-                  <div class="temperature-container d-flex justify-content-end">
-                    <canvas width="52" height="52"></canvas>
+                <div class="col-6 d-flex justify-content-center">
+                  <div class="temperature-container d-flex mt-3">
                     <img
                       src=""
                       alt=""
