--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
           <div class="card-body">
             <form class="search-form" id="search-form">
               <div class="row">
-                <div class="col-7">
+                <div class="col-sm-7 d-flex">
                   <input
                     type="search"
                     placeholder="Type a city.."
                     autofocus="on"
                     autocomplete="off"
                     id="city-input"
-                    class="form-control shadow-sm"
+                    class="form-control shadow-sm d-flex"
                   />
                 </div>
-                <div class="col-2">
+                <div class="col-sm-2 d-flex">
                   <input
                     type="submit"
                     value="Search"
@@ -42,7 +42,7 @@
                     id="search-button"
                   />
                 </div>
-                <div class="col-2">
+                <div class="col-sm-2 d-flex">
                   <button
                     class="form-control btn btn-primary"
                     id="currentLocation"
@@ -67,7 +67,9 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-6 d-flex justify-content-center">
+                <div
+                  class="col-6 d-flex justify-content-center justify-content-center align-items-center"
+                >
                   <div class="temperature-container d-flex mt-3">
                     <img
                       src=""
