--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   </ul>
                 </div>
                 <div
-                  class="col-6 d-flex justify-content-center justify-content-center align-items-center"
+                  class="col-6 d-flex justify-content-center align-items-center"
                 >
                   <div class="temperature-container d-flex mt-3">
                     <img
@@ -79,8 +79,8 @@
                     />
                     <div id="temp-element">
                       <span class="temperature" id="temperature">13</span
-                      ><span class="unit">
-                        <a href="" id="celcius-link" class="active">°C</a> |
+                      ><span class="unit d-none d-sm-block">
+                        <a href="" id="celcius-link" class="active">C</a> |
                         <a href="" id="farenheit-link">°F</a>
                       </span>
                     </div>
