--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     />
                     <div id="temp-element">
                       <span class="temperature" id="temperature">13</span
-                      ><span class="unit d-none d-sm-block">
+                      ><span class="unit">
                         <a href="" id="celcius-link" class="active">C</a> |
                         <a href="" id="farenheit-link">°F</a>
                       </span>
